# ProActuary

./: .gitignore  LICENSE  README.md  ci-constraints.txt  mypy-requirements.txt  pyproject.toml
.github/workflows/: mypy.yml  publish.yml  test.yml
proactuary/: __init__.py  _proactuary.py  _util.py
test/: tests.py
